# kannagi

./: .gitignore  Cargo.toml  README.md  compose.yaml  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: on_merge.yml
kannagi/: all.html  fn.main.html  index.html
rust_template/: all.html  fn.main.html  index.html
src/: lib.rs  main.rs
src/devices/: audio.rs  mod.rs
src/kannagi/: main.rs.html
src/rust_template/: main.rs.html
src/server/: controller.rs  controllers.rs  mod.rs  service.rs
src/utils/: logging.rs
