[package]
name = "kannagi"
version = "0.1.0"
repository = "https://github.com/den-taku/kannagi"
description = ""
# homepage = ""
# documentation = "" # Maybe needless
# categories = [""]
# keywords = [""]
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
actix-web = "4.1.0"
file-rotate = "0.6.0"
log = "0.4.17"
rodio = "0.15.0"
simplelog = "0.12.0"

[profile.release]
strip = "debuginfo"
